fixed #9 - z-index move l_hours behind context_menu

--- a/assets/stylesheets/stuff_to_do.css
+++ b/assets/stylesheets/stuff_to_do.css
@@ -230,7 +230,7 @@ li.stuff-to-do-item div.issue-extras div.estimate {
   left: 2%;
   top: 0px;
   text-align: left;
-  z-index: 100;
+  z-index: 10;
   height: 1.1em;
   overflow: hidden;
   white-space: nowrap;
